--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
 
 		<div class="site-logo">
 			<a href="index.html" class="avatar">
-				<img src="assets/img/melekonay_profile_1x1.jpg"/>
-			</a>
+				<!--<img src="assets/img/melekonay_profile_1x1.jpg"/>-->
+			<!--</a>-->
 			<h2 class="name">Melek Onay</h2>
 			<span class="slogan">Senior High School Student, Artist</span>
+			</a>
 		</div>
 
 		<nav>
@@ -93,7 +94,7 @@
 			<div class="contact-info">
 				<ul class="list-unstyled list-inline">
 					<!--<li class="list-inline-item"><span class="fa fa-phone align-middle"></span>+90 0(5xx) 3xx 7x 8x</li>-->
-					<li class="list-inline-item"><span class="fa fa-envelope align-middle"></span>**ÖĞRENCİ MAİL</li>
+					<li class="list-inline-item"><span class="fa fa-envelope align-middle"></span>melek.onay.uni@gmail.com</li>
 				</ul>
 			</div>
 			<div class="container-fluid">
