--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 		<div class="site-logo">
 			<a href="index.html" class="avatar">
-				<!--<img src="assets/img/melekonay_profile_1x1.jpg"/>-->
-			<!--</a>-->
+				<img src="assets/img/melekonay_profile_1.jpg"/>
+			</a>
 			<h2 class="name">Melek Onay</h2>
 			<span class="slogan">Senior High School Student, Artist</span>
 			</a>
